--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -1,6 +1,6 @@
 <div class="topMargin">
   <div class="container">
-    <div id="myBtnContainer">
+    <div class="myBtnContainer">
         <a href="/events" class="btn nonActive btn-sm btnFilter" >Show all</a>
         <a href="/events/filter/health" class="btn nonActive btn-sm btnFilter" >Health & Wellness</a>
         <a href="/events/filter/sports" class="btn nonActive btn-sm btnFilter" >Sport & Fitness</a>
@@ -12,15 +12,15 @@
         <a href="/events/filter/scifi" class="btn nonActive btn-sm btnFilter" >Sci-Fi & Games</a>
         <a href="/events/filter/books" class="btn nonActive btn-sm btnFilter" >Books</a>
         <a href="/events/filter/pets" class="btn nonActive btn-sm btnFilter" >Pets</a>
-        <a href="/events/filter/arts" class="btn nonActive btn-sm btnFilter" >Arts & Crafts</a>
         <a href="/events/filter/tech" class="btn nonActive btn-sm btnFilter" >Tech</a>
+        <a href="/events/filter/arts" class="btn nonActive btn-sm btnFilter" >Arts & Crafts</a>
         <a href="/events/filter/fashion" class="btn nonActive btn-sm btnFilter" >Fashion & Beauty</a>
         <a href="/events/filter/career" class="btn nonActive btn-sm btnFilter" >Career & Learning</a>
-
+        <a href="/events/filter/other" class="btn nonActive btn-sm btnFilter" >Other</a>
     </div>
     <div class="row">
       <% events.forEach((event) => { %>
-        <div class="col-6">
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="imageGrid cardContainer shadow">
             <a href="/events/<%= event.id %>">
               <div class="imageSizing img-fluid" style="background-image: url(<%= event.image %>); height: 300px; width: 100%;"></div>
@@ -33,7 +33,6 @@
           </div>
         </div>
         <% }); %>
-
       </div>
     </div>
 </div>
