--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -1,4 +1,4 @@
-<div class="container formMargin formWidth">
+<div class="container formMargin test formWidth">
   <form method="POST" action="/events">
     <div class="form-group">
       <input type="text" class="form-control" placeholder="Title..." name="title" id="title" required>
@@ -29,11 +29,12 @@
         <option>Fashion & Beauty</option>
         <option>Career & Learning</option>
         <option>Tech</option>
+        <option>Other</option>
       </select>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Image URL..." name="image" id="image" required>
-  </div>
-  <button class="button btn btn-primary btn-block">Add new event</button>
-</form>
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="Image URL..." name="image" id="image" required>
+    </div>
+    <button class="button btn btn-primary btn-block">Add new event</button>
+  </form>
 </div>
