--- a/views/statics/index.ejs
+++ b/views/statics/index.ejs
@@ -1,5 +1,5 @@
 <div class="homepageImage">
   <div id="overlay">
-    <h1 class="homepageText">Find and create catch up events. Explore and inspire. Let's catch up!</h1>
+    <h1 class="homepageText">Find and create events. Explore and inspire. Let's catch up!</h1>
   </div>
 </div>
