--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,63 +8,62 @@
   <link rel="stylesheet" href="/css/style.css">
   <script src="/js/app.js" charset="utf-8"></script>
   <script src="https://use.fontawesome.com/6f7fe4e9e4.js"></script>
-  <script type="text/javascript">
-  function initAutocomplete() {
-    autocomplete = new google.maps.places.Autocomplete(
-        /** @type {!HTMLInputElement} */(document.getElementById('address')),
-        {types: ['geocode']});
-
-    autocomplete.addListener('place_changed', fillInAddress);
-  }
-
-  function fillInAddress() {
-    var place = autocomplete.getPlace();
-  }
-  </script>
 </head>
 <body style="background-color:#f7f7f7;">
+
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark stroke">
-    <a class="navbar-brand" href="/">Ketchup</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav  mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/events">Events</a>
-        </li>
-      </ul>
+    <div class="container">
+      <a class="navbar-brand" href="/">Ketchup</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav  mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/events">Events</a>
+          </li>
+        </ul>
 
-      <ul class="navbar-right navbar-nav  mt-2 mt-lg-0">
-        <% if (locals.isLoggedIn) { %>
-          <li class="nav-item">
-            <a class="nav-item nav-link" href="/events/new">Add event</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-item nav-link" href="/logout">Logout</a>
-          </li>
-          <% } else { %>
-          <li class="nav-item">
-            <a class="nav-item nav-link" href="/login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-item nav-link" href="/register">Register</a>
-         </li>
-       <% } %>
-     </ul>
-
+        <ul class="navbar-right navbar-nav  mt-2 mt-lg-0">
+          <% if (locals.isLoggedIn) { %>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="/events/new">Add event</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="/logout">Logout</a>
+            </li>
+            <% } else { %>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="/register">Register</a>
+           </li>
+         <% } %>
+        </ul>
+      </div>
     </div>
   </nav>
+
+
   <% for (const type in messages) { %>
     <p class="alert alert-<%= type %>"><%= messages[type] %></p>
   <% } %>
+  <div style="min-height:83vh;"
     <%- body %>
+  </div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOQ7C-wA0O8dxB0e1BMa0RMC6eWbmjzoQ&libraries=places&callback=initAutocomplete" async defer></script>
 </body>
+  <footer class="card-footer footer text-muted">
+    <div class=" container">
+    Made by <a href="https://github.com/RadvileDid" class="footerColor">Raddid</a> @ London GA WDI course
+    </div>
+  </footer>
 </html>
