cleaned up scss file a bit

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,17 @@
+//background color
 $black-background-color: black;
 $body-background-color: #F7F7F7;
 $orange-background-color: orange;
 $white-background-color: white;
 $lightGrey-background-color: lightGrey;
+
+//text color
 $white-text-color: white;
 $black-text-color: black;
 $orange-text-color: orange;
+
+//text styling
+$no-text-decor: none;
+
+//spacing
+$auto-margin: 0 auto;
