--- a/views/events/edit.ejs
+++ b/views/events/edit.ejs
@@ -1,4 +1,4 @@
-<div class="container formMargin formWidth">
+<div class="container form">
   <h1>Update <%= event.title %></h1>
   <form method="POST" action="/events/<%= event.id %>">
     <input type="hidden" name="_method" value="PUT">
