--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -1,4 +1,4 @@
-<div class="container formMargin test formWidth">
+<div class="container form">
   <form method="POST" action="/events">
     <div class="form-group">
       <input type="text" class="form-control" placeholder="Title..." name="title" id="title" required>
