--- a/views/registrations/new.ejs
+++ b/views/registrations/new.ejs
@@ -1,4 +1,4 @@
-<div class="container formMargin formWidth">
+<div class="container form">
 
   <% if (locals.message) { %>
     <div class="alert alert-primary">
