--- a/views/events/show.ejs
+++ b/views/events/show.ejs
@@ -1,106 +1,96 @@
 <div class="topMargin">
   <div class="container">
-    <div class="topMargin">
-      <div class="container">
-        <div class="row">
-          <div class="img-fluid col-12 imageSizing imgShadow" style="background-image: url('<%= event.image %>'); height: 450px; width: 350px;"></div>
-        </div>
-        <div class="row topMargin">
-          <div class="col-lg-6 col-md-12 eventInfo topMargin">
-            <div class="row">
-              <div class="col-10">
-                <h2> <%= event.title %></h2>
-              </div>
-              <div class="col-2 row">
-              <% if(locals.isLoggedIn && event.createdBy._id.toString() === currentUser._id.toString()) { %>
-                <div class="col-6">
-                  <a href="/events/<%= event.id %>/edit" class="btn btn-sm btn-outline-success editButton"><i class="fa fa-pencil" aria-hidden="true"></i></a>
-                </div>
-                <form method="POST" action="/events/<%= event.id %>" class="col-6">
-                  <input type="hidden" name="_method" value="DELETE">
-                  <button class="btn-sm btn btn-outline-danger editButton"><i class="fa fa-trash" aria-hidden="true"></i></button>
-                </form>
-              <% } %>
-              </div>
+    <div class="container">
+      <div class="row">
+        <div class="img-fluid col-12 imageSizing imgShadow" style="background-image: url('<%= event.image %>'); height: 450px; width: 350px;"></div>
+      </div>
+      <div class="row topMargin">
+        <div class="col-lg-6 col-md-12 eventInfo topMargin">
+          <div class="row">
+            <div class="col-10">
+              <h2> <%= event.title %></h2>
             </div>
-            <p class="text-muted small"><%= moment(event.date).format('MMMM Do, YYYY') %></p>
-            <p><%= event.description %></p>
-            <p>Address: <%= event.address %></p>
-            <div class="attendants row">
+            <div class="col-2 row">
+            <% if(locals.isLoggedIn && event.createdBy._id.toString() === currentUser._id.toString()) { %>
               <div class="col-6">
-                <div class="row float-right">
-                <% if(locals.isLoggedIn && event.attendants.every(element => { %>
-                  <% return element._id.toString() != locals.user._id.toString() %>
-                  <% })) { %>
-                    <form method="POST" action="/events/<%= event.id %>/attendants" class="col-lg-6 col-md-12">
-                      <input type="hidden" name="_method" value="PUT">
-                      <input type="hidden" name="attendant" value="<%= locals.user._id %>">
-                      <button class="btn btn-success btn-sm">Count me in! <i class="fa fa-user-plus" aria-hidden="true"></i></button>
-                    </form>
-                    <% } else if(!locals.isLoggedIn){ %>
-                      <a href="/login" class="btn btn-sm btn-danger commentLoginButton">Login to RSVP</a>
-                      <% } %>
-                </div>
+                <a href="/events/<%= event.id %>/edit" class="btn btn-sm btn-outline-success editButton"><i class="fa fa-pencil" aria-hidden="true"></i></a>
               </div>
-              <div class="col-6">
-                <p>Coming: <%= event.attendants.length %> <i class="fa fa-users" aria-hidden="true"></i></p>
-              </div>
+              <form method="POST" action="/events/<%= event.id %>" class="col-6">
+                <input type="hidden" name="_method" value="DELETE">
+                <button class="btn-sm btn btn-outline-danger editButton"><i class="fa fa-trash" aria-hidden="true"></i></button>
+              </form>
+            <% } %>
             </div>
           </div>
-
-
-
-          <div class="col-lg-6 col-md-12 commentInfo topMargin">
-            <h2 class="col-12">Comments</h2>
-            <% event.comments.forEach((comment) => { %>
-              <div class="allComments imgShadow">
-                <div class="row">
-                  <div class="col-10 commentDetails">
-                    <div class="row">
-                      <p class="col-12 font-weight-bold commentMargin"><%= comment.createdBy.username %></p>
-                    </div>
-                    <div class="row">
-                      <p class="col-12 text-muted small commentMargin"><%= moment(comment.createdAt).format('MMMM Do YYYY, h:mm:ss a') %></p>
-                    </div>
-                  </div>
-                  <div class="col-2 commentDelete">
-                    <% if(locals.isLoggedIn && comment.createdBy._id.toString() === currentUser._id.toString()) { %>
-                      <form method="POST" action="/events/<%= event.id %>/comments/<%= comment.id %>">
-                        <input type="hidden" name="_method" value="DELETE">
-                        <button class="btn btn-outline-danger editButton btn-sm"><i class="fa fa-trash" aria-hidden="true"></i></button>
-                      </form>
+          <p class="text-muted small"><%= moment(event.date).format('MMMM Do, YYYY') %></p>
+          <p><%= event.description %></p>
+          <p>Address: <%= event.address %></p>
+          <div class="attendants row">
+            <div class="col-6">
+              <div class="row float-right">
+              <% if(locals.isLoggedIn && event.attendants.every(element => { %>
+                <% return element._id.toString() != locals.user._id.toString() %>
+                <% })) { %>
+                  <form method="POST" action="/events/<%= event.id %>/attendants" class="col-lg-6 col-md-12">
+                    <input type="hidden" name="_method" value="PUT">
+                    <input type="hidden" name="attendant" value="<%= locals.user._id %>">
+                    <button class="btn btn-success btn-sm">Count me in! <i class="fa fa-user-plus" aria-hidden="true"></i></button>
+                  </form>
+                  <% } else if(!locals.isLoggedIn){ %>
+                    <a href="/login" class="btn btn-sm btn-danger commentLoginButton">Login to RSVP</a>
                     <% } %>
+              </div>
+            </div>
+            <div class="col-6">
+              <p>Coming: <%= event.attendants.length %> <i class="fa fa-users" aria-hidden="true"></i></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-12 comment topMargin">
+          <h2 class="col-12">Comments</h2>
+          <% event.comments.forEach((comment) => { %>
+            <div class="allComments imgShadow">
+              <div class="row">
+                <div class="col-10 commentDetails">
+                  <div class="row">
+                    <p class="col-12 font-weight-bold"><%= comment.createdBy.username %></p>
+                  </div>
+                  <div class="row">
+                    <p class="col-12 text-muted small"><%= moment(comment.createdAt).format('MMMM Do YYYY, h:mm:ss a') %></p>
                   </div>
                 </div>
-                <div class="underlineComment col-12"></div>
-                <p class="commentText"><%= comment.content %></p>
+                <div class="col-2 commentDelete">
+                  <% if(locals.isLoggedIn && comment.createdBy._id.toString() === currentUser._id.toString()) { %>
+                    <form method="POST" action="/events/<%= event.id %>/comments/<%= comment.id %>">
+                      <input type="hidden" name="_method" value="DELETE">
+                      <button class="btn btn-outline-danger editButton btn-sm"><i class="fa fa-trash" aria-hidden="true"></i></button>
+                    </form>
+                  <% } %>
+                </div>
               </div>
-            <% }) %>
-            <div class"col-12">
-              <% if(locals.isLoggedIn) { %>
-                <section>
-                  <form method="POST" action="/events/<%= event.id %>/comments" >
-                    <textarea name="content" id="content" placeholder=" Leave your comment..." class="allComments imgShadow commentTextArea col-12"></textarea>
-                    <div class="row">
-                      <button class="button btn btn-sm btn-success commentButton">Comment <i class="fa fa-commenting-o" aria-hidden="true"></i></button>
-                    </div>
-                  </form>
-                </section>
-              <% } else if(!locals.isLoggedIn) {%>
-                  <div class="commentTextArea allComments imgShadow">
-                    <div class="text-center">
-                        <div class="col-12">Please login to leave a comment!</div>
-                        <a href="/login" class="btn btn-sm logginButtonPadding btn-danger">Login</a>
-                    </div>
-                  </div>
-              <% } %>
+              <div class="underlineComment col-12"></div>
+              <p class="commentText"><%= comment.content %></p>
             </div>
-        </div>
-
-
-
-
-
+          <% }) %>
+          <div class"col-12">
+            <% if(locals.isLoggedIn) { %>
+              <section>
+                <form method="POST" action="/events/<%= event.id %>/comments" >
+                  <textarea name="content" id="content" placeholder=" Leave your comment..." class="allComments imgShadow commentTextArea col-12"></textarea>
+                  <div class="row">
+                    <button class="button btn btn-sm btn-success commentButton">Comment <i class="fa fa-commenting-o" aria-hidden="true"></i></button>
+                  </div>
+                </form>
+              </section>
+            <% } else if(!locals.isLoggedIn) {%>
+                <div class="commentTextArea allComments imgShadow">
+                  <div class="text-center">
+                      <div class="col-12">Please login to leave a comment!</div>
+                      <a href="/login" class="btn btn-sm logginButtonPadding btn-danger">Login</a>
+                  </div>
+                </div>
+            <% } %>
+          </div>
       </div>
     </div>
   </div>
