--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/css/style.css">
   <script src="/js/app.js" charset="utf-8"></script>
   <script src="https://use.fontawesome.com/6f7fe4e9e4.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body style="background-color:#f7f7f7;">
 
