--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOQ7C-wA0O8dxB0e1BMa0RMC6eWbmjzoQ&libraries=places" async defer></script>
   <script src="/js/app.js" charset="utf-8"></script>
   <script src="https://use.fontawesome.com/6f7fe4e9e4.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,7 +61,6 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOQ7C-wA0O8dxB0e1BMa0RMC6eWbmjzoQ&libraries=places&callback=initAutocomplete" async defer></script>
 </body>
   <footer class="card-footer footer text-muted">
     <div class=" container">
